--- a/public/css/pages/manageUsers.css
+++ b/public/css/pages/manageUsers.css
@@ -13,7 +13,6 @@
   justify-content: space-between;
   align-items: center;
   gap: 2rem;
-  padding: 2rem;
   margin-bottom: 3rem;
   border-radius: 1rem;
 }
